<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_material_light"
    android:orientation="vertical">
    <LinearLayout
        android:layout_marginBottom="@dimen/calculator_button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3">
        <TextView
            android:id="@+id/screen"
            android:text="test"
            android:layout_marginBottom="@dimen/calculator_screen_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_textview"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="@dimen/calculator_button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:id="@+id/id_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/color_button_text"
            android:layout_marginRight="@dimen/calculator_button_margin"
            android:layout_weight="1"
            android:text="@string/clear"/>
        <Button
            android:id="@+id/id_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/color_button_text"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/calculator_button_margin"
            android:text="@string/delete"/>
        <Button
            android:id="@+id/id_divide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/color_button_text"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/calculator_button_margin"
            android:text="@string/divide"/>
        <Button
            android:id="@+id/id_multiply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/color_button_text"
            android:layout_weight="1"
            android:text="@string/multiply"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="@dimen/calculator_button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:id="@+id/id_seven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/color_button_text"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/calculator_button_margin"
            android:text="@string/seven"/>
        <Button
            android:id="@+id/id_eight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/color_button_text"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/calculator_button_margin"
            android:text="@string/eight"/>
        <Button
            android:id="@+id/id_nine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/color_button_text"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/calculator_button_margin"
            android:text="@string/nine"/>
        <Button
            android:id="@+id/id_subtract"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/color_button_text"
            android:layout_weight="1"
            android:text="@string/subtract"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="@dimen/calculator_button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:id="@+id/id_four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/color_button_text"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/calculator_button_margin"
            android:text="@string/four"/>
        <Button
            android:id="@+id/id_five"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/color_button_text"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/calculator_button_margin"
            android:text="@string/five"/>
        <Button
            android:id="@+id/id_six"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/color_button_text"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/calculator_button_margin"
            android:text="@string/six"/>
        <Button
            android:id="@+id/id_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/color_button_text"
            android:layout_weight="1"
            android:text="@string/add"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginBottom="@dimen/calculator_button_margin"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/id_one"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_selector"
                    android:textColor="@drawable/color_button_text"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/calculator_button_margin"
                    android:text="@string/one"/>
                <Button
                    android:id="@+id/id_two"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_selector"
                    android:textColor="@drawable/color_button_text"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/calculator_button_margin"
                    android:text="@string/two"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <Button
                    android:id="@+id/id_zero"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_selector"
                    android:textColor="@drawable/color_button_text"
                    android:layout_marginRight="@dimen/calculator_button_margin"
                    android:text="@string/zero"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/id_three"
                android:layout_marginBottom="@dimen/calculator_button_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:textColor="@drawable/color_button_text"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/calculator_button_margin"
                android:text="@string/three"/>
            <Button
                android:id="@+id/id_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:textColor="@drawable/color_button_text"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/calculator_button_margin"
                android:text="@string/point"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/id_equal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_selector"
                android:textColor="@drawable/color_button_text"
                android:text="@string/equal"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
